--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <meta name="description" content="Liec savai idejai uzplaukt">
-	    <title>AGW</title>
+	    <title>StickyHead</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	    <link href='https://fonts.googleapis.com/css?family=Roboto:900,500,100,300,700,400|Roboto+Slab:400,700,300,100&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
       <style>
@@ -36,7 +35,7 @@
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
       <!--- // required end --->
       <!--- plugin --->
-      <script type="text/javascript" src="../jQuery.stickyHead.js"></script>
+      <script type="text/javascript" src="jQuery.stickyHead.js"></script>
       <!--- // plugin end --->
       <!--- plugin call --->
       <script>
